# OPDA

./: .gitignore  README.md  pyproject.toml
opda/: __init__.py
opda/analysis/: __init__.py
opda/cli/: __init__.py
opda/client/: __init__.py  okta_client.py  pagination.py  rate_limiter.py
opda/config/: logging_config.py  settings.py
opda/models/: audit_results.py  okta_entities.py
opda/policies/: __init__.py  engine.py  evaluator.py
opda/remediation/: __init__.py
opda/storage/: __init__.py  database.py
tests/: __init__.py
tests/unit/: test_audit_results.py  test_config_settings.py  test_database.py  test_logging_config.py  test_okta_client.py  test_okta_entities.py  test_package_init.py  test_pagination.py  test_policy_engine.py  test_policy_evaluator.py  test_rate_limiter.py
